EXTRA_DIST= build-all.sh minipack.conf mpk README \
  patches/gd patches/gd/0001-Export-sysbols-when-building-as-a-DLL.patch \
  patches/gd/0002-Libtool-requires-no-undefined-to-build-a-DLL.patch \
  patches/gd/0003-Avoid-conflit-between-libjpeg-and-windows-headers.patch \
  patches/gettext/01-revert-sed-string.patch \
  patches/gettext/02-Avoid-missing-open-argument-error.patch \
  patches/gtk+ patches/gtk+/01-mousewheel.patch \
  patches/zlib patches/zlib/01-shared-lib-support.patch \
  patches/zlib/02-cross-build.patch \
  recipes/atk.recipe recipes/cairo.recipe recipes/gd.recipe \
  recipes/gettext.recipe recipes/glib.recipe recipes/gtk+.recipe \
  recipes/jpeg.recipe recipes/libiconv.recipe recipes/libpng.recipe \
  recipes/pango.recipe recipes/pcb.recipe recipes/pixman.recipe \
  recipes/tiff.recipe recipes/zlib.recipe \
  tools/mpk-build tools/mpk-clean tools/mpk-config.guess \
  tools/mpk-help tools/mpk-install tools/mpk-remove tools/mpk-shell \
  tools/mpk-source tools/mpk-unpack tools/mpk-version \
  tools/tool.template
