
EXTRA_DIST= \
  build-all.sh \
  minipack.conf \
  mpk \
  README \
  $(wildcard patches/*/*.patch) \
  $(wildcard recipes/*.recipe) \
  tools/mpk-build \
  tools/mpk-clean tools/mpk-config.guess \
  tools/mpk-help \
  tools/mpk-install \
  tools/mpk-remove \
  tools/mpk-shell \
  tools/mpk-source \
  tools/mpk-unpack \
  tools/mpk-version \
  tools/tool.template
