
EXTRA_DIST= \
	Readme.txt.in \
	build-all.sh \
	build-installer.sh \
	minipack.conf \
	mpk \
	pcb.nsi.in \
	README \
	registerExtension.nsh \
	$(wildcard licenses/LICENSE-*) \
	$(wildcard patches/*/*.patch) \
	$(wildcard recipes/*.recipe) \
	tools/mpk-build \
	tools/mpk-clean tools/mpk-config.guess \
	tools/mpk-help \
	tools/mpk-install \
	tools/mpk-license \
	tools/mpk-remove \
	tools/mpk-shell \
	tools/mpk-source \
	tools/mpk-unpack \
	tools/mpk-version \
	tools/tool.template
