
htmldir   = @PCBLIBDIR@/html
html_DATA = ${HTML}

HTML=  arrow_down.gif arrow_left.gif arrow_right.gif arrow_up.gif pcb-icon.gif \
       footprints.js

# Copy the vendor footprints
EXTRA_DIST=	${HTML}

MOSTLYCLEANFILES     = *.log core FILE *~ 
CLEANFILES           = *.log core FILE *~ 
DISTCLEANFILES       = *.log core FILE *~
MAINTAINERCLEANFILES = *.log core FILE *~ Makefile.in ChangeLog
