EXTRA_DIST= \
	README \
	oshw-logo.pcb \
	oshw-logo.png \
	oshw-logo_L_fill.pcb \
	oshw-logo_L_nofill.pcb \
	oshw-logo_M_fill.pcb \
	oshw-logo_M_nofill.pcb \
	oshw-logo_S_fill.pcb \
	oshw-logo_S_nofill.pcb \
	oshw-logo_XL_fill.pcb \
	oshw-logo_XL_nofill.pcb \
	oshw-logo_XXL_fill.pcb \
	oshw-logo_XXL_nofill.pcb

