## Top level 'models' automake file

scadprototypesdir=	@SCADTREEDIR@/proto
scadprototypes_DATA=	${SCADPROTOTYPES}


SCADPROTOTYPES= \
	dip.scad \
	dipsocket.scad \
	chip-c.scad \
	chip-r.scad \
	chip-l.scad \
	axial-r.scad \
	axial-d.scad \
	axial-cp.scad \
	qfp.scad \
	soic.scad \
	sot.scad \
	lcd_module.scad

EXTRA_DIST= ${SCADPROTOTYPES}
