pcblibsubdir= @PCBTREEDIR@/not_vetted_ingo
pcblibsub_DATA= ${COMPONENTS}
COMPONENTS= \
	pc104+.ele \
	pc104.ele \
	pq100.ele \
	pq128.ele \
	pq144.ele \
	pq160.ele \
	pq208.ele \
	pq240.ele \
	pq304.ele \
	pq32.ele \
	pq44.ele \
	smt0402.ele \
	smt0603.ele \
	smt0805.ele \
	smt1206.ele \
	smt1210.ele \
	smt1913.ele \
	smt2416.ele 

EXTRA_DIST= ${COMPONENTS}

