
SUBDIRS= HTSSOP MSOP QSOP SOD SOIC SOJ SOT TSOP VSOP

pcblibsubdir= @PCB_STDLIB_DIR@/SO

pcblibsub_DATA= ${FOOTPRINTS}

FOOTPRINTS= ${wildcard *.fp} 
	 
EXTRA_DIST= ${FOOTPRINTS}

MOSTLYCLEANFILES = *.log core FILE *~ 
CLEANFILES = *.log core FILE *~ 
DISTCLEANFILES = *.log core FILE *~
MAINTAINERCLEANFILES = *.log core FILE *~ Makefile.in ChangeLog

