## -*- makefile -*-

SUBDIRS=	\
	hid_bom1 \
	hid_bom2 \
	hid_bom3 \
	hid_bom4 \
	hid_gcode1 \
	hid_gcode2 \
	hid_gcode3 \
	hid_gcode4 \
	hid_gcode5 \
	hid_gcode6 \
	hid_gcode7 \
	hid_gcode8 \
	hid_gcode9 \
	hid_gcode10 \
	hid_gcode11 \
	hid_gerber1 \
	hid_gerber2 \
	hid_gerber3 \
	hid_png1 \
	hid_png2 \
	hid_png3
