
pcblibsubdir= @PCB_STDLIB_DIR@/connector/SUBD

pcblibsub_DATA= ${FOOTPRINTS}

FOOTPRINTS= ${wildcard *.fp} 
	 
EXTRA_DIST= ${FOOTPRINTS}

MOSTLYCLEANFILES     = *.log core FILE *~ 
CLEANFILES           = *.log core FILE *~ 
DISTCLEANFILES       = *.log core FILE *~
MAINTAINERCLEANFILES = *.log core FILE *~ Makefile.in ChangeLog

